# indoor-movement-prediction

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
data/: indoor_movement.csv  indoor_movement_red.csv
notebooks/:  Indoor User Movement Prediction from RSS Data Set .ipynb  temp-plot.html
processed_data/: index.html
src/: app.py
