[tool.poetry]
name = "indoor-movement-prediction"
version = "0.1.0"
description = ""
authors = ["rednafi <redowan.nafi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
scipy = "^1.5.3"
umap-learn = "^0.4.6"
numpy = "^1.19.2"
tsfresh = "^0.17.0"
plotly = "^4.12.0"
tqdm = "^4.51.0"
scikit-learn = "^0.23.2"
jupyter = "^1.0.0"
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

